Add tournaments with team registration
